[build-system]
requires = ["scikit-build-core", "nanobind", "IsoSpecPy @ git+https://github.com/MatteoLacki/IsoSpec.git@3aa6bbc8e9bb3b0d91fa7a564b890552caf6cd56"]
build-backend = "scikit_build_core.build"

[project]
name = "massimo_cpp"
version = "0.0.1"
dependencies = [
    "IsoSpecPy @ git+https://github.com/MatteoLacki/IsoSpec.git@3aa6bbc8e9bb3b0d91fa7a564b890552caf6cd56",
    "mmappet @ git+https://github.com/michalsta/mmappet.git",
    "cffi"
]
