[build-system]
requires = ["scikit-build-core", "nanobind", "IsoSpecPy>=2.3.0dev4"]
build-backend = "scikit_build_core.build"

[project]
name = "massimo_cpp"
version = "0.0.1"
dependencies = [
    "IsoSpecPy>=2.3.0dev4",
    "mmappet @ git+https://github.com/michalsta/mmappet.git",
    "cffi"
]

[project.optional-dependencies]
dev = [
    "pandas",
    "ipython",
    "tqdm",
    "numba",
]